# django-es-facets

./: README.md  pytest.ini  setup.cfg
.github/workflows/: ci.yml
src/: faceted_search.py
src/django_es_facets/: fields.py  views.py
src/django_es_kit/: faceted_search.py  fields.py  forms.py  paginator.py  views.py
src/django_es_kit/tests/: test_settings.py  test_views.py
