[metadata]
name = django-es-facets
version = 0.1
description = This package provides an intuitive way to create faceted search views and forms for your Django Application.
long_description = file: README.md
url = https://github.com/joeyjurjens/django-es-facets
author = Joey Jurjens
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    Django<4.3,>=3.2

[options.packages.find]
where = src
