[metadata]
name = django-es-kit
version = 0.1
description = This package provides some goodies to easily interact with Elasticsearch from within your Django application.
long_description = file: README.md
url = https://github.com/joeyjurjens/django-es-kit
author = Joey Jurjens
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    django-elasticsearch-dsl
    django>=3.2

[options.packages.find]
where = src
